Remove file-based updater